# yoo

./: .env  Cargo.toml  Dockerfile  Makefile
.github/workflows/: docker.yml
api/: Cargo.toml
api/src/: api.rs  handler.rs  jwt.rs  lib.rs  resp.rs  vo.rs
core/: Cargo.toml
core/src/: lib.rs  models.rs  mutation.rs  query.rs  vo.rs
entity/: Cargo.toml
entity/src/: configs.rs  groups.rs  lib.rs  prelude.rs  projects.rs  templates.rs  users.rs
migration/: Cargo.toml
migration/src/: lib.rs  m20230104_141642_create_groups.rs  m20230104_172456_create_configs.rs  m20230105_152813_create_users.rs  m20230106_093504_create_templates.rs
