[package]
name = "yoo"
version = "0.1.0"
edition = "2021"

[workspace]
members = [".", "api", "entity", "core"]

[dependencies]
api = { version = "0.1.0", path = "api" }

[target.x86_64-pc-windows-gnu]
linker = "x86_64-w64-mingw32-gcc"

[target.x86_64-unknown-linux-gnu]
linker = "x86_64-linux-gnu-gcc"
