[package]
name = "api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yoo-core = { path = "../core", package = "core" }
entity = { path = "../entity" }
anyhow = "1.0.68"
dotenvy = "0.15.6"
tokio = { version = "1.23.0", features = ["full"] }
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.91"
sea-orm = { version = "0.10.6", features = [
    "macros",
    "debug-print",
    "runtime-tokio-rustls",
    "sqlx-postgres",
] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }
tower-http = { version = "0.3.5", features = ["cors"] }
jsonwebtoken = "8.2.0"
headers = "0.3.8"
once_cell = "1.17.0"
axum = { version = "0.6.1", features = ["headers", "macros", "multipart"] }
chrono = "0.4.23"
bcrypt = "0.13.0"
rust-s3 = "0.32.3"
futures = "0.3.18"

