[package]
name = "core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
entity = { path = "../entity" }
sea-orm = { version = "0.10.6", features = [
    "macros",
    "debug-print",
    "runtime-tokio-rustls",
    "sqlx-postgres",
] }
chrono = "0.4.23"
serde = { version = "1.0.152", features = ["derive"] }
